--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+
     <junit.version>4.13.1</junit.version>
     <slf4j.version>1.7.21</slf4j.version>
     <leveldb.version>0.12</leveldb.version>
@@ -37,13 +40,6 @@
 
   <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>${junit.version}</version>
-      </dependency>
-
-
       <dependency>
         <groupId>com.xingkaichun.helloworldblockchain</groupId>
         <artifactId>helloworld-blockchain-core</artifactId>
@@ -86,6 +82,12 @@
       </dependency>
 
       <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>${junit.version}</version>
+      </dependency>
+
+      <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
         <version>${springboot.version}</version>
@@ -102,12 +104,12 @@
         <artifactId>leveldb</artifactId>
         <version>${leveldb.version}</version>
       </dependency>
-
       <dependency>
         <groupId>org.iq80.leveldb</groupId>
         <artifactId>leveldb-api</artifactId>
         <version>${leveldb.version}</version>
       </dependency>
+
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
