--- a/helloworld-blockchain-util/pom.xml
+++ b/helloworld-blockchain-util/pom.xml
@@ -13,6 +13,18 @@
 
     <name>helloworld-blockchain-util</name>
     <url>http://www.helloworldblockchain.com</url>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>7</source>
+                    <target>7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
